# denker-app

./: .gitignore  .gitmodules  DEPENDENCY_NOTES.md  README.md  auth0_config_instructions.md
backend/: .dockerignore  DEPENDENCY_MANAGEMENT.md  Dockerfile  Dockerfile.lockgenerator  MCP_Google_Briefing.md  MCP_Google_Briefing_Outline.md  Model_Context_Protocol_Report_Improved.md  README.md  VERTEX_ANTHROPIC_SETUP_GUIDE.md  cloud-run.yaml  deploy_qdrant.sh  diagnose_websearch.py  docker-compose.dev.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  key.json  main.py  mcp  mcp_agent.config.yaml  mcp_report_outline.md  model_context_protocol_report.md  pyproject.toml  requirement-mcp.txt  requirements.txt  requirements.txt.bak  setup_tunnels.sh  start_qdrant.sh  test_anthropic_api.py  test_anthropic_format.py  test_websearch_mcp_agent.py  update_mcp_agent.sh  vertexai.json
backend/agents/: base_agent.py  intention_agent.py
backend/api/api_v1/: api.py
backend/api/api_v1/endpoints/: agents.py  auth.py  conversations.py  files.py  memory.py  users.py
backend/config/: settings.py
backend/core/: auth.py  global_coordinator.py
backend/db/: README.md  database.py  init_db.py  models.py  repositories.py  session.py
backend/docs/: VERTEX_ANTHROPIC_SETUP_GUIDE.md  gemini_integration.md  rag_setup.md
backend/mcp_local/: coordinator_agent.py  coordinator_agents_config.py  coordinator_decisions.py  coordinator_filesystem.py  coordinator_memory.py  coordinator_workflows.py  mcp_agent.config.yaml  memory_tools.py  pg_memory_tools.py
backend/mcp_local/base/: protocol.py  server.py
backend/mcp_local/core/: __init__.py  event_websocket_transport.py  websocket_manager.py
backend/mcp_local/core/tools/: human_input_tool.py
backend/mcp_local/llm/: vertex_ai_llm.py  vertex_anthropic_llm.py
backend/mcp_local/servers/document_loader/: __init__.py  server.py
backend/mcp_local/servers/markdown_editor/: README.md  __init__.py  markdown_converter.py  markdown_editor.py  markdown_preview.py  requirements.txt  server.py  test_markdown_server.py
backend/mcp_local/servers/websearch/: server.py
backend/migrations/: env.py
backend/migrations/versions/: 00fe537abe67_initial_migration.py  11cf511cdd47_add_is_processed_to_files.py  1e7db0360b2f_rename_file_path_to_storage_path.py
backend/qdrant_data/: raft_state.json
backend/qdrant_data/collections/denker_embeddings/: config.json
backend/qdrant_data/collections/denker_embeddings/0/: newest_clocks.json  replica_state.json
backend/qdrant_data/collections/denker_embeddings/0/segments/1a7713dd-6514-4ab6-95de-f4baa9a32732/: 000173.sst  000175.sst  000223.sst  000225.sst  000361.sst  000363.sst  000411.sst  000413.sst  000437.sst  000439.sst  IDENTITY  LOG  MANIFEST-000527  MANIFEST-000595  MANIFEST-000827  MANIFEST-001441  MANIFEST-001445  segment.json
backend/qdrant_data/collections/denker_embeddings/0/segments/1d58afb1-6f70-4707-ac4e-e3b79ea0d495/: 000029.sst  000031.sst  000223.sst  000225.sst  000361.sst  000363.sst  000379.sst  000381.sst  000417.sst  000419.sst  000463.sst  000465.sst  IDENTITY  LOG  MANIFEST-000533  MANIFEST-000601  MANIFEST-000833  MANIFEST-001447  MANIFEST-001451  (+1 more)
backend/scripts/: cleanup_deleted_files.py  init_qdrant.sh  init_qdrant_docker.sh  install_rag_dependencies.sh  load_qdrant_data.py  run_cleanup.sh  setup_qdrant.py  setup_qdrant_dev.sh  test_anthropic_fix.py  test_file_processing.py  test_live_preview.py  test_markdown_editor.py  test_quickchart_direct.py  test_quickchart_server.sh  test_server_health.py  test_server_health.sh  test_websearch.py  test_websearch_server.py
backend/services/: file_cleanup.py  file_processing.py  health_checks.py  qdrant_service.py  scheduler.py  security.py  vertex_ai.py
backend/sql/: create_memory_schema.sql
local-backend/: CHART_MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  QDRANT_SECURITY_FIX.md  README_VERTEX_AI.md  STREAMING_IMPLEMENTATION.md  TEST_README.md  WORKSPACE_STRUCTURE.md  check_qdrant_indexes.py  denker_user_settings.json  local-backend-pkg.spec  main.py  pyinstaller_build.sh  pyproject.toml  requirement-mcp.txt  run_tests.py  set_dev_environment.sh  test_anthropic_direct.py  test_chart_integration.py  test_isolated_vertex.py  test_markdown_editor_comprehensive.py  test_orchestrator.py
local-backend/api/api_v1/: api.py
local-backend/api/api_v1/endpoints/: agents.py  settings.py  test_vertex.py
local-backend/config/: logging_config.py  settings.py
local-backend/core/: global_coordinator.py  user_store.py
local-backend/denker_default_fs_root_fallback/: denker_log.md
local-backend/mcp_local/: app_extension.py  coordinator_agent.py  coordinator_agents_config.py  coordinator_decisions.py  coordinator_memory.py  coordinator_websocket.py  coordinator_workflows.py  fixed_router_anthropic.py  mcp_agent.config.yaml  memory_tools.py  pg_memory_tools.py  qdrant_user_filter_patch.py
local-backend/mcp_local/base/: __init__.py  server_session.py
local-backend/mcp_local/base/protocol/: __init__.py
local-backend/mcp_local/core/: cloud_agent_repository.py  cloud_file_repository.py  cloud_message_repository.py  event_websocket_transport.py  filesystem_interceptor.py  shared_workspace.py  websocket_manager.py
local-backend/mcp_local/llm/: __init__.py
local-backend/mcp_local/servers/document_loader/: server.py
local-backend/mcp_local/servers/markdown_editor/: README.md  chart_generator.py  markdown_converter.py  markdown_editor.py  markdown_integration.py  markdown_preview.py  photo_generator.py  requirements.txt  server.py  table_generator.py
local-backend/mcp_local/servers/qdrant/: main.py  mcp_server.py  qdrant.py  settings.py
local-backend/mcp_local/servers/qdrant/embeddings/: fastembed.py
local-backend/mcp_local/servers/websearch/: __init__.py  server.py
local-backend/runtime_hooks/: node_path_hook.py
local-backend/scripts/: add_user_index_to_qdrant.py
local-backend/services/: background_preloader.py  file_processing.py  health_checks.py  mcp_server_prewarmer.py  qdrant_service.py
local-backend/utils/: resource_utils.py
(+294 files in other folders)
