[project]
name = "denker-app-amarone"
version = "0.1.1"
description = "denker-ai"
authors = [
    {name = "jane"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.105.0)",
    "uvicorn (==0.23.2)",
    "sqlalchemy (>=2.0.21)",
    "alembic (>=1.12.0)",
    "psycopg2 (>=2.9.7)",         # or "asyncpg (>=0.28.0)" if you use async
    "python-multipart (>=0.0.6)",
    "python-jose (>=3.3.0)",
    "passlib[bcrypt] (>=1.7.4)",
    "httpx (>=0.25.0)",
    "jinja2 (>=3.1.2)",
    "pyjwt (>=2.8.0)",
    "pydantic (>=2.7.4)",
    "tenacity (>=8.2.3)",         # Only if you use retry logic
    "beautifulsoup4 (>=4.12.0,<5.0.0)",  # Only if you parse HTML in the cloud backend
    # Google Cloud dependencies
    "google-cloud-storage (>=2.10.0)",
    "google-auth (>=2.22.0)",
    "google-cloud-core (>=2.3.3)",
    "google-generativeai (>=0.3.1)",
    "google-cloud-aiplatform (>=1.36.4)",
    "pydantic-settings>=2.0.0",
    "pillow>=9.0.0",
    "asyncpg (>=0.28.0)",
    "qdrant-client (>=1.8.0)"
]

[tool.poetry]
name = "denker-app-backend"
version = "0.1.0"
description = "Denker AI Backend"
authors = ["Juan Zhang <jane@denker.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pycrypto = { version = "*", optional = true, markers = "python_version < '0'" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
